# document-risk-compliance

./: .gitignore  README.md
backend-regex/: .gitignore  README.md  pyproject.toml  pytest.ini
backend-regex/app/: config.py
backend-regex/app/api/: main.py  routes.py
backend-regex/app/compare/: __init__.py  diff_engine.py  history.py  normalization.py  pairing.py  pipeline.py
backend-regex/app/detect/: __init__.py  comparators.py  compression.py  decision.py  deterministic.py  pipeline.py
backend-regex/app/eval/: __init__.py  baseline.py  datasets.py  history.py  metrics.py  models.py  runner.py
backend-regex/app/ingest/: __init__.py  datasets.py  models.py  normalizer.py  ocr_client.py  parser.py  s3_storage.py  storage.py
backend-regex/app/llm/: __init__.py  litellm_client.py  prompts.py
backend-regex/app/monitor/: __init__.py  langfuse.py  telemetry.py
backend-regex/tests/: conftest.py  test_api.py  test_compare_pipeline.py  test_config.py  test_cursor_like.py  test_datasets.py  test_detection_pipeline.py  test_deterministic_detectors.py  test_embedding_client.py  test_eval_baseline.py  test_eval_datasets.py  test_eval_metrics.py  test_eval_runner.py  test_evidence.py  test_litellm_client.py  test_llm_prompts.py  test_local_storage.py  test_metrics.py  test_monitoring.py  test_nextplaid_client.py  test_normalizer.py  test_ocr.py  test_parser.py  test_ranking.py  test_regex_planner.py  test_routes_ingest.py  test_s3_storage.py  test_search_pipeline.py  test_workers.py
backend-regex/workers/: celery_app.py  tasks.py
core-regx/: docker-compose.yml
(+48 files in other folders)
