[project]
name = "backend-regex"
version = "0.1.0"
description = "Backend API for document inconsistency detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "litellm>=1.74.0",
    "diff-match-patch>=20241021",
    "pymupdf>=1.24.0",
    "langfuse>=2.0.0",
    "pytest>=9.0.2",
    "datasets>=4.8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=app --cov=workers --cov-report=term-missing"

[tool.coverage.run]
source = ["app", "workers"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
